# QuantDSS

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE1.md  Makefile  README.md  architecture_diagrams.md  backend_logs.txt  chaos_report.md  clarification_audit.md  docker-compose.dev.yml  docker-compose.yml  ruff_output.txt  run.bat  stop.bat  system_architecture1.md  walkthrough.md.resolved
backend/: Dockerfile  Dockerfile.worker  alembic.ini  chaos_tester.py  check_signals.py  check_signals_breakdown.py  check_stats.py  check_timescale.py  enable_paper.py  list_tables.py  load_test.py  mypy.txt  mypy2.txt  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.txt  run_replay_api.py  run_replay_rich.py  runtime_simulation_report.md  simulate_keys.py  test_audit_fixes.py  test_audit_fixes_mock.py  test_execution_fixes.py  test_reliability.py  test_replay.py  test_scan.py
backend/app/: __init__.py
backend/app/alerts/: __init__.py  alert_dispatcher.py  sse_manager.py  telegram_notifier.py
backend/app/analytics/: strategy_health_monitor.py
backend/app/api/: deps.py  main.py
backend/app/backtest/: backtest_engine.py
backend/app/core/: circuit_breaker.py  config.py  database.py  kafka_client.py  logging.py  metrics.py  notifier.py  rate_limit.py  redis.py  redis_lock.py  scheduler.py  security.py  streams.py  tracing.py  (+1 more)
backend/migrations/: env.py
backend/scripts/: backup_db.py  compile_proto.py  download_history.py  download_history_1h.py  run_simulation.py  seed_defaults.py  test_angel.py
backend/tests/: conftest.py  test_agent.py
(+235 files in other folders)
